dev/frontend/cmcio-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cmcio-frontend-ingress
  namespace: dev 
spec:
  rules:
  - host: lb-cmcio-1397561919.us-west-1.elb.amazonaws.com  # provicionalmente el registro A del load balancer
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cmcio-frontend-service
            port:
              number: 80
